<resources>
    <string name="app_name">Deadline</string>
    <string name="textView1">WELCOME IN THIS AMAZING GAME!</string>
    <string name="radioButton1">New user?</string>
    <string name="radioButton2">I already have an account</string>
    <string name="button1">PROCEED</string>
    <string name="imageView1">Welcome image</string>
    <string name="RadioButton3">About</string>
    <string name="editText1">Username...</string>
    <string name="editText2" translatable="false">Password...</string>
    <string name="editText3">Password (again)...</string>
    <string name="textView2">CREATE A NEW USER</string>
    <string name="button2">CONFIRM</string>
    <string name="missingInformation">Some info are missing</string>
    <string name="differentPassword">Passwords are not the same</string>
    <string name="userCreated">User correctly created</string>
    <string name="errorCreationUser">Some error occurred during the creation of the user</string>
    <string name="textView3">LOGIN TO YOUR ACCOUNT</string>
    <string name="button3">LOGIN</string>
    <string name="usernameNotFound">This username does not exist</string>
    <string name="wrongPassword">Password is incorrect</string>
    <string name="button4">LOGOUT</string>
    <string name="button5">PLAY</string>
    <string name="textView4">Profile of USERNAME</string>
    <string name="textView5">Games played = XX</string>
    <string name="textView6">Best score = XX</string>
    <string name="checkBok1">Remember me</string>
    <string name="button6">CHECK</string>
    <string name="button7" translatable="false">RESET</string>
    <string name="button8">EXIT</string>
</resources>
